--- a/projects/rtSynth_rt/conf/rtSynth_rt.toml
+++ b/projects/rtSynth_rt/conf/rtSynth_rt.toml
@@ -1,5 +1,5 @@
 # sample.toml -> tProject.toml
-# Config file for sample.py project
+# # Config file for sample.py project
 title = 'Sample Project'
 sessionId = "20180310T123000"
 
@@ -11,7 +11,7 @@ runNum = [1]
 scanNum = [1]
 
 ## important variables about the dicom files
-dicomNamePattern = "001_0000{}_000{}.dcm"  
+dicomNamePattern = "001_0000{}_000{}.dcm"
 minExpectedDicomSize = 300000
 
 ## design myself for feedback parameters.
