--- a/projects/rtSynth_rt/conf/sub001.ses1.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses1.toml
@@ -13,7 +13,8 @@
 
 # for 8 recognition run on day5 ; 
 
-# subject Yuexuan Li
+# subject Yuexuan Li,
+# 
 
 session=1 # which session is this? which day is this on? could be 1 2 3 4 5 
 runNum = [1,2,3,4,5,6,7,8] # This is the list of unique run, e.g. when the recognition1 is repeated twice, this can be 1 and 2
