--- a/projects/rtSynth_rt/conf/sub001.ses1.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses1.toml
@@ -23,7 +23,7 @@ scanNum = [1,2,3,4,5,6,7,8] # This is a list of scan(or runs that might be repet
 
 subjectName = "sub001" # subject folder name in the rtSynth_rt/subjects folder
 LASTNAME="rtSynth_sub001"
-
+subjectIDforxnat="rtSynth_sub001" #PATIENTID has to be unique for each subject
 
 realtimeFolder_subjectName="rtSynth_sub001"
 preDay_YYYYMMDD="0" # can be "0" if there is no previous day for this session
