--- a/projects/rtSynth_rt/conf/sub001.ses2.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses2.toml
@@ -23,11 +23,12 @@ scanNum = [1,2,3,4,5,6,7,8] # This is a list of scan(or runs that might be repet
 
 subjectName = "sub001" # subject folder name in the rtSynth_rt/subjects folder
 LASTNAME="rtSynth_sub001"
+subjectIDforxnat="rtSynth_sub001_ses2" #PATIENTID has to be unique for each subject
 
 
 realtimeFolder_subjectName="rtSynth_sub001"
 preDay_YYYYMMDD="20210114" # can be "0" if there is no previous day for this session
-YYYYMMDD="20210114" #note that 20210114 is for simulation should actually be "20210118"
+YYYYMMDD="20210114" #note that 20210114 is for simulation should actually be "20210122"
 num_total_TRs=174 # number of total TRs in feedback session
 
 TrialNumber= 12 # feedback trial number for a feedback run.
