--- a/projects/rtSynth_rt/conf/rtSynth_rt.pilot_sub001.toml
+++ b/projects/rtSynth_rt/conf/rtSynth_rt.pilot_sub001.toml
@@ -1,3 +1,4 @@
+
 # Config file for rtSynth_rt project
 # we have a seperate file for each subject and 
 # for 8 recognition runs on day1; 
@@ -14,23 +15,18 @@
 # for 8 recognition run on day5 ; 
 
 
+title = 'pilot test'
+
 session=1 # which session is this? which day is this on? could be 1 2 3 4 5 
+subjectDay = 1 # which day is this run on 
 runNum = [1,2,3,4,5,6,7,8] # This is the list of unique run, e.g. when the recognition1 is repeated twice, this can be 1 and 2
 scanNum = [1,2,3,4,5,6,7,8] # This is a list of scan(or runs that might be repetitive)
 
 ## important variables about the dicom files
 dicomNamePattern = "001_0000{}_000{}.dcm"
 
-subjectName = "pilot_sub001" # subject folder name in the rtSynth_rt/subjects folder
-LASTNAME="rtSynth_pilot001"
-
 
 realtimeFolder_subjectName="rtSynth_pilot001" # part of the folder name in /gpfs/milgram/project/realtime/DICOM
-preDay_YYYYMMDD="20201009" # can be "0" if there is no previous day for this session
+subjectName = "pilot_sub001" # subject folder name in the rtSynth_rt/subjects folder
 YYYYMMDD="20201019" # part of the folder name in /gpfs/milgram/project/realtime/DICOM
 num_total_TRs=150 # number of total TRs in feedback session
-
-
-maxTR= 1 # recognition maximum TR
-TrialNumber= 1 # feedback trial number for neuro feedback run. 1 hr feedback session, each feedback trial is  
-
