--- a/projects/rtSynth_rt/conf/sub001.ses2.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses2.toml
@@ -18,6 +18,7 @@
 title = 'rtSynth_rt'
 
 session=2 # which session is this? which day is this on? could be 1 2 3 4 5 
+subjectDay = 2 #this is for the naming of web/conf/{subjactName}_day{subjectDay}_run{runNum}.toml
 runNum = [1] #[1,2,3,4,5,6,7,8] # This is the list of unique run, e.g. when the recognition1 is repeated twice, this can be 1 and 2
 scanNum = [1] #[1,2,3,4,5,6,7,8] # This is a list of scan(or runs that might be repetitive)
 
