--- a/projects/rtSynth_rt/conf/sub001.ses2.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses2.toml
@@ -45,6 +45,6 @@ plotYRangeLow = -1
 plotYRangeHigh = 1
 plotAutoRangeX = false
 plotAutoRangeY = true
-dicomNamePattern = "001_0000{}_000{}.dcm"
+dicomNamePattern = "001_{SCAN:06d}_{TR:06d}.dcm"
 minExpectedDicomSize=300000
 
