--- a/projects/rtSynth_rt/conf/sub001.ses1.toml
+++ b/projects/rtSynth_rt/conf/sub001.ses1.toml
@@ -18,6 +18,7 @@
 title = 'rtSynth_rt'
 
 session=1 # which session is this? which day is this on? could be 1 2 3 4 5 
+subjectDay = 1 #this is for the naming of web/conf/{subjactName}_day{subjectDay}_run{runNum}.toml
 runNum = [1] #[1,2,3,4,5,6,7,8] # This is the list of unique run, e.g. when the recognition1 is repeated twice, this can be 1 and 2
 scanNum = [1] #[1,2,3,4,5,6,7,8] # This is a list of scan(or runs that might be repetitive)
 
@@ -29,7 +30,20 @@ subjectIDforxnat="rtSynth_sub001" #PATIENTID has to be unique for each subject
 realtimeFolder_subjectName="rtSynth_sub001"
 preDay_YYYYMMDD="0" # can be "0" if there is no previous day for this session
 YYYYMMDD="20210114"
-num_total_TRs=150 # number of total TRs in feedback session
+num_total_TRs=174 # number of total TRs in feedback session
 
-TrialNumber= 48 # feedback trial number for neuro feedback run. 1 hr feedback session, each feedback trial is  
+TrialNumber= 12 # feedback trial number for a feedback run.
+
+
+plotTitle = 'Realtime Plot'
+plotXLabel = 'Sample #'
+plotYLabel = 'Value'
+plotXRangeLow = 0
+plotXRangeHigh = 176
+plotYRangeLow = 0
+plotYRangeHigh = 20
+plotAutoRangeX = false
+plotAutoRangeY = true
+# dicomNamePattern = "001_{SCAN:06d}_{TR:06d}.dcm"
+minExpectedDicomSize=300000
 
