add emoji into repo

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ web/*
 !subjects/sub*/ses*/recognition/sub*.csv
 !subjects/sub*/ses*/feedback/*
 !subjects/sub*/*.csv
+!expScripts/feedback/*.png
