--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,10 @@ web/*
 !subjects/sub*/*.csv
 !expScripts/feedback/*.png
 !subjects/sub*/ses2/feedback/*
+
+subjects/sub001/*
+subjects/sub102/*
+*BRIK
+*HEAD
+*1D
+
