--- a/.gitignore
+++ b/.gitignore
@@ -144,7 +144,7 @@ subjects/sub102/*
 *1D
 subjects/sub*/ses*/anat/*
 subjects/sub002_changed
-subjects/backup_sub001
+subjects/sub002_backupAfterSes4
 
 
 
