--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,7 @@ web/*
 !expScripts/feedback/emoji13.png
 !subjects/sub00*/ses*/feedback/*.csv
 !subjects/sub00*/ses*/runRecording.csv
+!subjects/sub00*/ses*/catPer/catPer*.txt
 
 subjects/sub102/*
 *BRIK
